# hive

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
src/: engine.rs  java_glue.rs.in  jni_c_header.rs  lib.rs  main.rs  utils.rs
src/engine/: game.rs  grid.rs  mod.rs  moves.rs  rule.rs  rules.rs
src/engine/game/: action.rs  player.rs
src/engine/grid/: coordinate.rs  geo.rs  mod.rs  piece.rs
src/engine/grid/coordinate/: cube.rs  hex.rs
src/engine/grid/geo/: cube.rs  hex.rs
src/engine/grid/piece/: queen_bee.rs
src/engine/moves/: beetle.rs  grasshoper.rs  ladybug.rs  mod.rs  mosquito.rs  queen_bee.rs  soldier_ant.rs  spider.rs
src/engine/rules/: hive.rs  mod.rs  moves.rs
src/tests/: grid.rs  grid_tests.rs  moves_tests.rs  rules_tests.rs
tests/: web.rs
