[package]
name = "hive"
version = "0.1.0"
authors = ["Olivier Pelletier <olivier.op@outlook.com>"]
edition = "2018"
description = "A game engine for Hive."
repository = "https://github.com/OlivierPelletier/hive"
license = ""
build = "build.rs"

[lib]
name = "hive"
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.5", features = ["json"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"

[build-dependencies]
flapigen = "0.6.0"
bindgen = { version = "0.66", default-features = false }
env_logger = "0.10"

[profile.release]
opt-level = "s"
