[package]
name = "hive"
version = "0.1.0"
authors = ["Olivier Pelletier <olivier.op@outlook.com>"]
edition = "2018"
description = "A game engine for Hive."
repository = "https://github.com/OlivierPelletier/hive"
license = ""

[lib]
name = "hive"
crate-type = ["lib"]

[[bin]]
name = "hive"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = "s"
