[package]
name = "hive-engine"
version = "0.2.0"
authors = ["Olivier Pelletier <olivier.op@outlook.com>"]
edition = "2021"
rust-version = "1.82"
description = "A game engine for Hive."
repository = "https://github.com/OlivierPelletier/hive"
license = "MIT"
readme = "README.md"

[lib]
name = "hive"
crate-type = ["lib"]

[[bin]]
name = "hive-engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
